5.ingress/3.quiz/2.deploy-boot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boot-deply
  namespace: delivery
spec:
  replicas: 2
  selector:
    matchLabels:
      abc: boot-app
  template:
    metadata:
      labels:
        abc: boot-app
    spec:
      containers:
      - name: boot-con
        image: choheewon00/boot-quiz:1.0
        resources:
          limits:
            memory: "300Mi"
            cpu: "500m"
        ports:
        - containerPort: 10000
