5.ingress/3.quiz/2.deploy-react.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deply
  namespace: delivery
spec:
  replicas: 2
  selector:
    matchLabels:
      abc: react-app
  template:
    metadata:
      labels:
        abc: react-app
    spec:
      containers:
      - name: react-con
        image: choheewon00/react-quiz:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
