5.ingress/3.quiz/3.service-boot.yml
apiVersion: v1
kind: Service
metadata:
  name: boot-svc
  namespace: delivery
spec:
  type: ClusterIP
  selector:
    abc: boot-app
  ports:
  - port: 10000
    targetPort: 10000
