5.ingress/3.quiz/3.service-react.yml
apiVersion: v1
kind: Service
metadata:
  name: react-svc
  namespace: delivery
spec:
  type: ClusterIP
  selector:
    abc: react-app
  ports:
  - port: 10000
    targetPort: 80
