5.ingress/3.quiz/4.ingress-web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: delivery

  # 경로를 새롭게 만들어준다. /member, /board -> / 변경하여 service 연결
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  #- host: <Host>
   - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: react-svc
            port: 
              number: 10000
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: boot-svc
            port: 
              number: 10000
